--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,20 @@
 
 # "temporary" build files
 /target
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
