--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,16 @@
-# .gitignore for Grails 1.2 and 1.3
+/web-app/WEB-INF
+*.log
 
-# web application files
-/web-app/WEB-INF/classes
-
-# default HSQL database files for production mode
-/prodDb.*
-
-# general HSQL database files
-*Db.properties
-*Db.script
-
-# logs
-/stacktrace.log
-/test/reports
-/logs
-
-# project release file
-/*.war
-
-# plugin release files
-/*.zip
+/grails-asset-autoprefixer-*.zip
+/grails-asset-autoprefixer-*.zip.sha1
 /plugin.xml
 
-# older plugin install locations
-/plugins
-/web-app/plugins
-
-# "temporary" build files
-/target
-
-# Eclipse
 .classpath
 .project
-.settings/
+/.settings
 
 # Intellij
-.idea/
+/.idea
 *.iml
 *.iws
 
@@ -43,5 +18,5 @@
 .DS_Store
 
 # Maven
-log/
-target/
+/log
+/target
