--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,42 @@
-/web-app/WEB-INF
-*.log
+# .gitignore for Grails 1.2 and 1.3
 
-/grails-asset-autoprefixer-*.zip
-/grails-asset-autoprefixer-*.zip.sha1
+# web application files
+/web-app/WEB-INF/classes
+
+# default HSQL database files for production mode
+/prodDb.*
+
+# general HSQL database files
+*Db.properties
+*Db.script
+
+# logs
+/stacktrace.log
+/test/reports
+/logs
+
+# project release file
+/*.war
+
+# plugin release files
+/*.zip
+/*.zip.sha1
 /plugin.xml
 
+# older plugin install locations
+/plugins
+/web-app/plugins
+
+# "temporary" build files
+/target
+
+# Eclipse
 .classpath
 .project
-/.settings
+.settings/
 
 # Intellij
-/.idea
+.idea/
 *.iml
 *.iws
 
@@ -18,5 +44,5 @@
 .DS_Store
 
 # Maven
-/log
-/target
+log/
+target/
